[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Pierre Chevalier <pierrechevalier83@gmail.com>"]
edition = "2018"

[lib]
name = "intcode_computer"
path = "intcode_computer/src/lib.rs"


[[bin]]
name = "01"
path = "01/src/main.rs"

[[bin]]
name = "02"
path = "02/src/main.rs"

[[bin]]
name = "03"
path = "03/src/main.rs"

[[bin]]
name = "04"
path = "04/src/main.rs"

[[bin]]
name = "05"
path = "05/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
