[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Pierre Chevalier <pierrechevalier83@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "intcode_computer",
	"map_display",
	"maze",
	"01",
	"02",
	"03",
	"04",
	"05",
	"06",
	"07",
	"08",
	"09",
	"10",
	"11",
	"12",
	"13",
	"14",
	"15",
	"16",
	"17",
	"18",
]

[[bin]]
name = "advent_of_code_2019"
path = "src/main.rs"

