[package]
name = "13"
version = "0.1.0"
authors = ["Pierre Chevalier <pierrechevalier83@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode_computer = { path = "../intcode_computer"}
termion = "1.5.4"
structopt = "0.3.5"
