[package]
name = "17"
version = "0.1.0"
authors = ["Pierre Chevalier <pierrechevalier83@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode_computer = { path = "../intcode_computer"}
map_display = { path = "../map_display"}
direction = "0.17.8"
itertools = "0.8.2"
